Acrescentando strings e alteracoes no layout da main activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">Carteira Virtual</string>
     <string name="cadastro">TELA DE LOGIN</string>
     <string name="login">Login</string>
-    <string name="button_entrar">Entrar</string>
+    <string name="button_entrar">ENTRAR</string>
     <string name="digitar_email_hint">Digite aqui o seu e-mail</string>
     <string name="digitar_senha_hint">Digite aqui o sua senha</string>
     <string name="titulo_tela_de_login">tela de login</string>
