Alteração basica em uma mensagem

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,8 +3,8 @@
     <string name="cadastro">TELA DE LOGIN</string>
     <string name="login">Login</string>
     <string name="button_entrar">ENTRAR</string>
-    <string name="digitar_email_hint">Digite aqui o seu e-mail</string>
-    <string name="digitar_senha_hint">Digite aqui o sua senha</string>
+    <string name="digitar_email_hint">E-mail</string>
+    <string name="digitar_senha_hint">Senha</string>
     <string name="titulo_tela_de_login">tela de login</string>
     <string name="segunda_activity_saldo">Seu saldo:</string>
     <string name="segunda_activity_gastos">Seus gastos:</string>
